Fix alignment

--- a/style.css
+++ b/style.css
@@ -313,7 +313,7 @@ th, td {
   vertical-align: middle;
 }
 th:nth-child(1), td:nth-child(1) { width: 20%; }
-th:nth-child(2), td:nth-child(2) { width: 12%; text-align: center; }
+th:nth-child(2), td:nth-child(2) { width: 12%; text-align: left; }
 th:nth-child(3), td:nth-child(3) { width: 28%; }
 th:nth-child(4), td:nth-child(4) { width: 13%; }
 th:nth-child(5), td:nth-child(5) { width: 13%; }
